# api/swagger/swagger.yaml
@@ -211,6 +211,11 @@ paths:
       produces:
       - "application/json"
       parameters:
+      # - name: invoiceNumber
+      #   in: query
+      #   description: ""
+      #   required: true
+      #   type: string
       - name: searchBy
         in: query
         description: "search by id"
@@ -247,6 +252,35 @@ paths:
         # responses may fall through to errors
         default:
           description: "Error"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /invoice/{id}:
+    x-swagger-router-controller: InvoiceController
+    get:
+      tags:
+      - "Invoice" 
+      summary: "Get Invoice by ID"
+      description: ""
+      operationId: "getInvoiceById"
+      produces:
+      - "application/json"
+      parameters:
+        - name: id
+          in: path
+          description: ""
+          required: true
+          type: string
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        404:
+          description: "Not Found"
           schema:
             $ref: "#/definitions/ErrorResponse"
   /bankRegistration:
